[project]
name = "financial-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for financial processing"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp[cli]>=0.1.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.61",
    "asyncio>=3.4.3",
    "langchain-mcp-adapters>=0.1.2",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "fastmcp>=2.5.1",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
path = "env" 
 